--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WaitingForGadoeApp</title>
+  <title>Godoe <%= ("| " + @page_title) unless @page_title.nil? %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="content">
+  <header>
+    <%= image_tag "logo.jpg", class: "logo", alt: "logo" %>
+    <h1> Godoe's Fine Eatery </h1>
+  </header>
+  <%= yield %>
+</div>
 
-<%= yield %>
-
+<footer>
+  <p>&copy; Harry Ganz 2016</p>
+</footer>
 </body>
 </html>
