--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
     <%= image_tag "logo.jpg", class: "logo", alt: "logo" %>
     <h1> Godoe's Fine Eatery </h1>
   </header>
+  <nav>
+    <ul class="nav-list">
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Menu", root_path %></li>
+    </ul>
+  </nav>
   <%= yield %>
 </div>
 
