--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <ul class="nav-list">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Menu", root_path %></li>
+      <li class="navbar-right btn btn-primary">Login</li>
     </ul>
   </nav>
   <%= yield %>
