Makes content for non-member landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
       <li class="navbar-right btn btn-primary">Login</li>
     </ul>
   </nav>
-  <%= yield %>
+  <div id="main">
+    <%= yield %>
+  </div>
 </div>
 
 <footer>
