--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,12 @@ h3 {
   padding: 0.5rem;
 }
 
+.btn-large {
+  display: inline-block;
+  padding: 1rem;
+  font-size: 2rem;
+}
+
 .btn-primary {
   color: #000;
   background-color: #B9E0A5;
@@ -112,6 +118,11 @@ nav a:hover {
 nav .btn {
   margin-top: 0.5rem;
   margin-right: 1rem;
+}
+
+/* Main Container Styles */
+#main {
+  padding: 2em;
 }
 
 /* Footer Styles */
