--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,12 @@ h3 {
   padding: 0.5rem;
 }
 
+.btn-unstyled {
+  border: none;
+  background-color: inherit;
+  font-size: inherit;
+}
+
 .btn-large {
   display: inline-block;
   padding: 1rem;
@@ -65,6 +71,17 @@ h3 {
 
 .btn-primary:hover {
   background-color: #97D077;
+}
+
+.btn-danger {
+  color: #fff;
+  background-color: #FF6666;
+  border: 2px solid #C75050;
+  border-radius: 0.5rem;
+}
+
+.btn-danger:hover {
+  background-color: #C75050;
 }
 
 /* Header Syles */
