--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -1,4 +1,8 @@
 <h3>Welcome to Gadoe's Eatery Management Portal</h3>
 <div id="jumbotron" class="four-three">
-  <button class="btn-large btn-primary">Login</button>
+  <button class="btn-large btn-primary">
+    <%= form_tag sessions_path, method: 'post' do %>
+      <%= submit_tag "Login", class: 'btn-unstyled'%>
+    <% end %>
+  </button>
 </div>
