Creates menu view
* Basic menu view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,6 +43,12 @@ h1 {
 h3 {
   font-size: 2em;
 }
+.lead {
+  font-weight: bold;
+}
+.emph {
+  font-style: italic;
+}
 
 /* Button Styles */
 .btn {
