Modifies menu link in navbar to link to /items
* Menu in navbar now links to the menu instead of the landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <nav>
     <ul class="nav-list">
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Menu", root_path %></li>
+      <li><%= link_to "Menu", items_path %></li>
       <% if logged_in? %>
         <li class="navbar-right btn btn-danger">
           <%= form_tag sessions_path, method: 'delete' do %>
