--- a/app/views/orders/_row.html.erb
+++ b/app/views/orders/_row.html.erb
@@ -7,5 +7,19 @@
       <p><%= item.name %></p>
     <% end %>
   </td>
+  <td><%= order.special %></td>
+  <% if !order.completed %>
+    <td><%= check_box_tag "completed", order.id %></td>
+  <% else %>
+    <td>
+      <%= form_tag order_path, method: "delete" do %>
+        <%= submit_tag "Delete" %>
+      <% end %>
+    </td>
+    <% end %>
+  <td>
+    <p><%= link_to "Edit", edit_order_path(order.id) %></p>
+    <p><%= link_to "View", order_path(order.id) %></p>
+  </td>
   </tr>
 <% end %>
