--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,7 +5,7 @@
     <th> Time </th>
     <th> Items </th>
     <th> Special </th>
-    <th> Completed </th>
+    <th> Complete </th>
     <th> Actions </th>
   </tr>
   <%= render partial: "row", locals: {orders: @incomplete_orders} %>
