Adds edit button to items for managers

--- a/app/views/items/_category.html.erb
+++ b/app/views/items/_category.html.erb
@@ -9,6 +9,9 @@
             <span class="emph"><%= item.description %></span> &mdash;
           </span class="lead"> <%= number_to_currency(item.price) %> </span>
           </p>
+          <% if is_manager? %>
+            <%= link_to "Edit",edit_item_path(item.id) %>
+          <% end %>
         </li>
       <% end %>
     </ul>
