Adds add item button for managers

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,3 +10,7 @@
   <%= render partial: "category",
   locals: {name: "Desserts", category: @desserts} %>
 </div>
+
+<% if is_manager? %>
+  <%= link_to "Add Item", new_item_path %>
+<% end %>
