Adds buttons to menu

--- a/app/views/items/_category.html.erb
+++ b/app/views/items/_category.html.erb
@@ -10,7 +10,7 @@
           </span class="lead"> <%= number_to_currency(item.price) %> </span>
           </p>
           <% if is_manager? %>
-            <%= link_to "Edit",edit_item_path(item.id) %>
+            <%= link_to "Edit",edit_item_path(item.id), class: "btn btn-success" %>
           <% end %>
         </li>
       <% end %>
