--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -12,5 +12,5 @@
 </div>
 
 <% if is_manager? %>
-  <%= link_to "Add Item", new_item_path %>
+  <%= link_to "Add Item", new_item_path, class: "btn btn-primary" %>
 <% end %>
