Fixes spelling in title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Godoe <%= ("| " + @page_title) unless @page_title.nil? %></title>
+  <title>Gadoe <%= ("| " + @page_title) unless @page_title.nil? %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -10,7 +10,7 @@
 <div class="content">
   <header>
     <%= image_tag "logo.jpg", class: "logo", alt: "logo" %>
-    <h1> Godoe's Fine Eatery </h1>
+    <h1> Gadoe's Fine Eatery </h1>
   </header>
   <nav>
     <ul class="nav-list">
